// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardSegment snapshots Without child 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  position: relative;
  background-color: transparent;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 30px;
}

.c0:hover {
  cursor: auto;
}

<CardSegment>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "CardSegment-sc-44tqm2-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "display:flex;flex:1 0 auto;position:relative;",
            [Function],
          ],
        },
        "displayName": "CardSegment",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "CardSegment-sc-44tqm2-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0"
    />
  </StyledComponent>
</CardSegment>
`;

exports[`CardSegment snapshots with > 1 child 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  position: relative;
  background-color: transparent;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 30px;
}

.c0:hover {
  cursor: auto;
}

<CardSegment>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "CardSegment-sc-44tqm2-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "display:flex;flex:1 0 auto;position:relative;",
            [Function],
          ],
        },
        "displayName": "CardSegment",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "CardSegment-sc-44tqm2-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0"
    >
      <div>
        child 1
      </div>
      <div>
        child 2
      </div>
    </div>
  </StyledComponent>
</CardSegment>
`;
